# gazebo-plugin-autonomous-actor

./: CMakeLists.txt  README.md  package.xml
include/: AttachModelPlugin.hh  CollisionActorPlugin.hh
include/autonomous_actor/: AutonomousActorPlugin.hh
launch/: start.launch
models/actor/: model.sdf
src/: AttachModelPlugin.cc  AutonomousActorPlugin.cc  CollisionActorPlugin.cc  CollisionActorPlugin2.cc
worlds/: demo_cafe.world  simple_office_with_people_motion3.world
